Archive2/01/cafe3e5f369b89/output
main.cpp:1:1: error: expected unqualified-id before 'if'
 if (n > 0 and n < 5)
 ^
