Archive2/01/cafe3e5f369b89/main.cpp
if (n > 0 and n < 5)
{
    std::cout << "n is small and positive\n";
}